[gd_scene load_steps=5 format=3 uid="uid://csftck78kw7g0"]

[ext_resource type="Script" path="res://src/ui/player/health/health_ui.gd" id="1_t5dfi"]
[ext_resource type="Texture2D" uid="uid://d35orauv810o3" path="res://src/ui/player/ammo/icon_ammo_red_32.png" id="2_35psh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bv6le"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x4dp7"]
bg_color = Color(0.941375, 0.348791, 0.282353, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="HealthUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_t5dfi")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.0
offset_top = -40.0
offset_right = 86.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_bv6le")

[node name="LoadedAmmoCount" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/LoadedAmmoCount"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/LoadedAmmoCount/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/LoadedAmmoCount/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HealthTick1" type="MarginContainer" parent="MarginContainer/LoadedAmmoCount/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/LoadedAmmoCount/VBoxContainer/MarginContainer/HBoxContainer/HealthTick1"]
layout_mode = 2
texture = ExtResource("2_35psh")
stretch_mode = 5

[node name="HealthTick2" type="MarginContainer" parent="MarginContainer/LoadedAmmoCount/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/LoadedAmmoCount/VBoxContainer/MarginContainer/HBoxContainer/HealthTick2"]
layout_mode = 2
texture = ExtResource("2_35psh")
stretch_mode = 5

[node name="HealthTick3" type="MarginContainer" parent="MarginContainer/LoadedAmmoCount/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/LoadedAmmoCount/VBoxContainer/MarginContainer/HBoxContainer/HealthTick3"]
layout_mode = 2
texture = ExtResource("2_35psh")
stretch_mode = 5

[node name="HealthTick4" type="MarginContainer" parent="MarginContainer/LoadedAmmoCount/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/LoadedAmmoCount/VBoxContainer/MarginContainer/HBoxContainer/HealthTick4"]
layout_mode = 2
texture = ExtResource("2_35psh")
stretch_mode = 5

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/LoadedAmmoCount/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 8

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/LoadedAmmoCount/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/fill = SubResource("StyleBoxFlat_x4dp7")
step = 1.0
value = 100.0
show_percentage = false
